--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>サイト制作課題</title>
-    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Noto+Serif+JP:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap"
@@ -42,11 +41,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="navbar navbar-expand-sm navbar-light">
       <a class="navbar-brand" href="#">
-        <img src="./img/header.png" alt="" />
+        <img src="../../../img/header.png" alt="" />
       </a>
       <div class="hamburger" data-toggle="collapse" href="#contents">
         <div class="rectangle"></div>
@@ -132,10 +133,10 @@
     </section>
     <div class="about container">
       <div class="img-group">
-        <img src="./img/about-1.jpg" alt="" />
-        <img src="./img/about-2.jpg" alt="" />
-        <img src="./img/about-3.jpg" alt="" />
-        <img src="./img/about-4.jpg" alt="" />
+        <img src="../../../img/about-1.jpg" alt="" />
+        <img src="../../../img/about-2.jpg" alt="" />
+        <img src="../../../img/about-3.jpg" alt="" />
+        <img src="../../../img/about-4.jpg" alt="" />
       </div>
       <div class="message">
         <h2 class="text-title">人と人、人と本がつながる全く新しい快適時間。</h2>
@@ -152,7 +153,11 @@
       <div class="card card-change">
         <div class="triangle"></div>
         <div class="triangle-text">CONCEPT</div>
-        <img src="./img/card-1.jpg" class="card-img-change" alt="card1" />
+        <img
+          src="../../../img/card-1.jpg"
+          class="card-img-change"
+          alt="card1"
+        />
         <div class="card-body-field">
           <div class="card-body card-body-change">
             <p>
@@ -167,7 +172,11 @@
       <div class="card card-change">
         <div class="triangle"></div>
         <div class="triangle-text">SERVICE</div>
-        <img src="./img/card-2.jpg" class="card-img-change" alt="card1" />
+        <img
+          src="../../../img/card-2.jpg"
+          class="card-img-change"
+          alt="card1"
+        />
         <div class="card-body-field">
           <div class="card-body card-body-change">
             喫茶・軽食を楽しめるカフェスペース。ビジネス書から最新の雑誌まで取り揃えるブックスペース。ブース型のパーソナルワークスペースに、開放感があるコワーキングスペース。
@@ -178,7 +187,11 @@
       <div class="card card-change">
         <div class="triangle"></div>
         <div class="triangle-text">FLOOR</div>
-        <img src="./img/card-3.jpg" class="card-img-change" alt="card1" />
+        <img
+          src="../../../img/card-3.jpg"
+          class="card-img-change"
+          alt="card1"
+        />
         <div class="card-body-field">
           <div class="card-body card-body-change">
             カフェ・ブック・コワーキング。各エリアで異なるコンセプトを持つ当店では。目的や気分に合わせてフロア内を移動することで充実した時間をお過ごしいただけます。<br />
@@ -232,7 +245,7 @@
           <article class="event-card">
             <a href="#">
               <div class="event-thumbnail">
-                <img src="./img/events-1.jpg" alt="" />
+                <img src="../../../img/events-1.jpg" alt="" />
               </div>
               <div class="event-caption">
                 <h3>全ての業種に対応した起業応援セミナーを開催します。</h3>
@@ -245,7 +258,7 @@
           <article class="event-card">
             <a href="#">
               <div class="event-thumbnail">
-                <img src="./img/events-2.jpg" alt="" />
+                <img src="../../../img/events-2.jpg" alt="" />
               </div>
               <div class="event-caption">
                 <h3>第3回　Switchクリエイター交流会開催いたします！</h3>
@@ -258,7 +271,7 @@
           <article class="event-card">
             <a href="#">
               <div class="event-thumbnail">
-                <img src="./img/events-3.jpg" alt="" />
+                <img src="../../../img/events-3.jpg" alt="" />
               </div>
               <div class="event-caption">
                 <h3>
